[gd_scene load_steps=2 format=3 uid="uid://jsvmnoss0cff"]

[ext_resource type="Script" path="res://src/Extensions/LospecPaletteImporter/LospecPaletteImporter.gd" id="1_1bk5d"]

[node name="LospecPaletteImporter" type="ConfirmationDialog"]
disable_3d = true
title = "Lospec Palette Importer"
position = Vector2i(0, 36)
size = Vector2i(476, 350)
ok_button_text = "Save & Import"
script = ExtResource("1_1bk5d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 468.0
offset_bottom = 301.0
size_flags_horizontal = 3

[node name="SearchBar" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="PaletteLineEdit" type="LineEdit" parent="VBoxContainer/SearchBar"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Insert palette name or URL"

[node name="Search" type="Button" parent="VBoxContainer/SearchBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Search"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SearchBar"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SearchBar/HBoxContainer"]
layout_mode = 2
text = "Or try the "

[node name="DailyPalette" type="LinkButton" parent="VBoxContainer/SearchBar/HBoxContainer"]
layout_mode = 2
text = "daily palette"

[node name="Label2" type="Label" parent="VBoxContainer/SearchBar/HBoxContainer"]
layout_mode = 2
text = ", or a "

[node name="RandomPalette" type="LinkButton" parent="VBoxContainer/SearchBar/HBoxContainer"]
layout_mode = 2
text = "random palette."

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
self_modulate = Color(0.890196, 0.890196, 0.890196, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PaletteInfo" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="InfoSeparator" type="VSeparator" parent="VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PaletteColorsPreview" type="TextureRect" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
size_flags_vertical = 3
stretch_mode = 5

[node name="PaletteOption" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="RowColumn" type="OptionButton" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/PaletteOption"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "Rows:"
popup/item_0/id = 0
popup/item_1/text = "Columns:"
popup/item_1/id = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/SearchBar/Search" to="." method="_on_search_pressed"]
[connection signal="pressed" from="VBoxContainer/SearchBar/HBoxContainer/DailyPalette" to="." method="_on_daily_palette_pressed"]
[connection signal="pressed" from="VBoxContainer/SearchBar/HBoxContainer/RandomPalette" to="." method="_on_random_palette_pressed"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/PaletteOption/RowColumn" to="." method="_on_row_column_item_selected"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
